@@ -4,6 +4,7 @@ v2.0.11
 - refresh the gridpoint and forecast urls from the lattitude/longitude every couple of days to handle grid changes in the api
 - only reset location descriptive name when lat,long is entered
 - retry after a minute if there is an error from the api
+- fixes when using forecast.weather.gov as the source
 
 v2.0.10
 - radar images url path changed
